static/css/style.css
body {
    word-wrap: break-word;
}

/*Quick way to change the font of the site*/
p,h1,h2,h3,h4,h5,a,button,label{
    font-family: 'Merienda', cursive;
}

.main-bg{
    background-image: url(../img/mainbg.jpg);
    background-size: cover;
    background-attachment: fixed;
    padding-top:80px;
}


/*----------Navbar----------*/

.navbar{
    background-image:linear-gradient(-90deg,rgb(94,50,17),rgb(76,60,48));
}

.navbar-brand{
    text-align: center;
}
.navbar-buttons{
    padding-right:1%;
}

.navbar-toggle{
    background-color:azure;
}

.navbar-toggle span{
    background-color:black;
}

.navbar-btn {
    color:white;
    font-weight: 800;
}

.custom-brand{
    color:white;
    font-weight: 900;
    
}


/*----------Footer----------*/

footer {
    background-image:linear-gradient(-90deg,rgb(94,50,17),rgb(76,60,48));
    color:white;
}


/*----------Login/Register Function Styling----------*/
.flashes{
    color:white;
}

.register-link{
    color:white;
}

.modal-content{
   margin-top:200px;
}

.btn-custom{
    color:rgb(123,79,53);
    background-color: rgb(248,196,71);
    font-weight: bold;
}


/*----------Index Page----------*/

.jumbo-image{
    background-image:url(../img/jumbo-bg.jpg);
    background-size: cover;
    margin-top:40px;
    background-position: bottom;
}

.jumbo-text{
    color: white !important;
}

.card-img-top{
    width:200px;
    text-align: center;
    border-radius: 5%;
}

.cuisine-row{
    padding-top:10px;
    text-align: center;
    margin-bottom:43px;
}

.card{
    background-color: white;
    border-radius: 10px;
    padding-top:5px;
    padding-bottom:5px;
}

/*----------Get Recipes Page----------*/

.edit-recipe-button {
    height: 35px;
    margin: 5px;
}

/*The below class allows the text on recipes page to begin hidden before users click on instructions/ingredients*/
.initiallyHidden { 
    display: none; 
}

.white-bg-styling{
    background-color: white;
    margin: 10px 5px 10px 5px;
    padding-bottom:10px;
    border-radius: 10px;
}
/*----------ADD Recipes Page----------*/

.title {
    background-color: lemonchiffon;
    margin-bottom: 10px;
}

.form-control {
    resize: vertical;
}

.recipe_form{
    margin-bottom:25px;
    border-radius: 10px;
    background-color: white;
    padding:10px 10px 10px 10px;
}

.text_format {
    white-space: pre-wrap;
}


/*----------List Cuisines Page----------*/

.flash-alert{
    animation: fadein 4s ease-in-out;
    font-size: 20px;
    color: white;
}

@keyframes fadein {
    0% { opacity: .9; }
    20% { opacity: 0; }
    40% { opacity: .9; }
    60% { opacity: 0; }
    80% { opacity: .9; }
    100% { opacity: 0; }
}


/*----------User Profile Page----------*/
.user-recipe-section{
    padding-top: 2%;
}

.profile-recipe{
    padding:10px;
}






/*---------------Media Queries---------------*/

/*--------Get Recipes Page--------*/
@media (max-width: 768px) {
    .ingredients_padding {
        padding-bottom: 3vh;
    }
}



/*--------Index Page--------*/
@media screen and (max-width: 768px) {
  .card{
    padding-top:2%;
    width:auto;
    padding-left:5vw;
    padding-right:5vw;
  }
}

@media screen and (max-width: 991px) {
  .card{
    padding-top:2%;
  }
}

